header added for the mobile version and desktop version some other sections like info section and recenet works section are also added

--- a/index.html
+++ b/index.html
@@ -8,6 +8,99 @@
     <title>Serategna</title>
 </head>
 <body>
-    
+    <header class="app-header">
+        <div class="app-header-info">
+                <div class="header-info-links">
+                    <ul class="social-links">
+                        <li class="social-link-list"><a title="facebook link" href=""><img src="./assets/images/facebook.png" alt="" srcset=""></a></li>
+                        <li class="social-link-list"><a title="twitter link" href=""><img src="./assets/images/twitter.svg" alt="" srcset=""></a></li>
+                    </ul>
+                    <ul class="other-links">
+                        <li class="other-link-list"><a href="">English</a></li>
+                        <li class="other-link-list"><a href="">Amharic</a></li>
+                        <li class="other-link-list"><a href="">Signout</a></li>
+                    </ul>
+                </div>
+        </div>
+        <nav class="app-nav">
+            <div class="app-logo">
+                <a title="app logo" href="/"><img class="logo-img" src="./assets/images/logo.png" alt="" srcset=""></a>
+            </div>
+            <ul class="nav-links">
+                <li class="nav-link-list"><a href="/">Home</a></li>
+                <li class="nav-link-list"><a href="/about">About</a></li>
+                <li class="nav-link-list"><a href="/services">Services</a></li>
+                <li class="nav-link-list"><button class="nav-btn">Become Tasker</button></li>
+            </ul>
+        </nav>
+        <div class="app-header-overlay">
+            <img class="humberger" src="./assets/images/menu.svg" alt="" srcset="">
+        </div>
+    </header>
+    <main class="main-content">
+        <section class="home-section">
+            <div class="home-section-overlay">
+                <div class="search-task-card">
+                    <h1 class="app-moto underline-center">Get help. Gain Happiness</h1>
+                    <p class="app-sub-moto">Just task.</p>
+                    <form action="/" method="post" class="search-task-form">
+                      <input type="text" name="task" class="search-task-form-input" placeholder="I need help with">
+                      <button type="submit" class="search-task-form-btn">Get Help</button>
+                    </form>
+                 </div> 
+                 <div class="home-section-info">
+                    <div class="home-section-info-container">
+                    <h2>Everyday life made easier</h2>
+                    <p>
+                       When life gets busy, you don’t have to tackle it alone. Get time back for what you love without breaking the bank.
+                    </p>
+                    <ul class="home-section-features">
+                        <li >
+                            <img src="./assets/images/done.svg" alt="" srcset="">
+                            <p>Choose your Tasker by reviews, skills, and price. </p>
+                        </li>
+                        <li >
+                            <img src="./assets/images/done.svg" alt="" srcset="">
+                            <p>Schedule when it works for you — as early as today. </p>
+                        </li>
+                        <li >
+                            <img src="./assets/images/done.svg" alt="" srcset="">
+                            <p>Chat, pay, tip, and review all through one platform.</p>
+                        </li>
+                    </ul>
+                    </div>
+                    <div class="home-section-img">
+                        <img src="./assets/images/tasker-desktop.jpg" alt="" srcset="">
+                    </div>
+                 </div> 
+            </div>
+        </section>
+        <section class="recent-works">
+            <h1 class="text-center underline-center">Latest Projects</h1>
+            <div class="recent-works-container">
+                <div class="work">
+                    <img src="./assets/images/menu.svg" alt="" srcset="">
+                    <h3 class="work-title">work 1</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi maiores quisquam odio ex natus doloremque, porro quos quasi magnam sunt odit esse exercitationem at ullam ea! Corrupti provident perspiciatis repellat.</p>
+                </div>
+                <div class="work">
+                    <img src="./assets/images/menu.svg" alt="" srcset="">
+                    <h3 class="work-title">work 1</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi maiores quisquam odio ex natus doloremque, porro quos quasi magnam sunt odit esse exercitationem at ullam ea! Corrupti provident perspiciatis repellat.</p>
+                </div>
+                <div class="work">
+                    <img src="./assets/images/menu.svg" alt="" srcset="">
+                    <h3 class="work-title">work 1</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi maiores quisquam odio ex natus doloremque, porro quos quasi magnam sunt odit esse exercitationem at ullam ea! Corrupti provident perspiciatis repellat.</p>
+                </div>
+                    <div class="work">
+                        <img src="./assets/images/menu.svg" alt="" srcset="">
+                        <h3 class="work-title">work 1</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi maiores quisquam odio ex natus doloremque, porro quos quasi magnam sunt odit esse exercitationem at ullam ea! Corrupti provident perspiciatis repellat.</p>
+                    </div>
+            </div>
+            <button class="work-btn"> Add Your Work</button>
+        </section>
+    </main>
 </body>
 </html>
