search task card and home info section added with mobile and desktop version

--- a/index.html
+++ b/index.html
@@ -39,47 +39,48 @@
     </header>
     <main class="main-content">
         <section class="home-section">
-            <div class="home-section-overlay">
-                <div class="search-task-card">
-                    <h1 class="app-moto underline-center">Get help. Gain Happiness</h1>
-                    <p class="app-sub-moto">Just task.</p>
-                    <form action="/" method="post" class="search-task-form">
-                      <input type="text" name="task" class="search-task-form-input" placeholder="I need help with">
-                      <button type="submit" class="search-task-form-btn">Get Help</button>
-                    </form>
-                 </div> 
-                 <div class="home-section-info">
-                    <div class="home-section-info-container">
-                    <h2>Everyday life made easier</h2>
-                    <p>
-                       When life gets busy, you don’t have to tackle it alone. Get time back for what you love without breaking the bank.
-                    </p>
-                    <ul class="home-section-features">
-                        <li >
-                            <img src="./assets/images/done.svg" alt="" srcset="">
-                            <p>Choose your Tasker by reviews, skills, and price. </p>
-                        </li>
-                        <li >
-                            <img src="./assets/images/done.svg" alt="" srcset="">
-                            <p>Schedule when it works for you — as early as today. </p>
-                        </li>
-                        <li >
-                            <img src="./assets/images/done.svg" alt="" srcset="">
-                            <p>Chat, pay, tip, and review all through one platform.</p>
-                        </li>
-                    </ul>
-                    </div>
-                    <div class="home-section-img">
-                        <img src="./assets/images/tasker-desktop.jpg" alt="" srcset="">
-                    </div>
-                 </div> 
+            <div class="home-section-desktop-container">
+                <div class="home-section-overlay">
+                    <div class="search-task-card">
+                        <h1 class="app-moto underline-center">Get help. Gain Happiness</h1>
+                        <p class="app-sub-moto">Just task.</p>
+                        <form action="/" method="post" class="search-task-form">
+                          <input type="text" name="task" class="search-task-form-input" placeholder="I need help with">
+                          <button type="submit" class="search-task-form-btn">Get Help</button>
+                        </form>
+                     </div> 
+                </div>
             </div>
+            <div class="home-section-info">
+                <div class="home-section-info-container">
+                <h2 class="">Everyday life made easier</h2>
+                <p>
+                   When life gets busy, you don’t have to tackle it alone. Get time back for what you love without breaking the bank.
+                </p>
+                <ul class="home-section-features">
+                    <li >
+                        <img src="./assets/images/done.svg" alt="" srcset="">
+                        <p>Choose your Tasker by reviews, skills, and price. </p>
+                    </li>
+                    <li >
+                        <img src="./assets/images/done.svg" alt="" srcset="">
+                        <p>Schedule when it works for you — as early as today. </p>
+                    </li>
+                    <li >
+                        <img src="./assets/images/done.svg" alt="" srcset="">
+                        <p>Chat, pay, tip, and review all through one platform.</p>
+                    </li>
+                </ul>
+                </div>
+                <div class="home-section-img">
+                </div>
+             </div> 
         </section>
         <section class="recent-works">
             <h1 class="text-center underline-center">Latest Projects</h1>
             <div class="recent-works-container">
                 <div class="work">
-                    <img src="./assets/images/menu.svg" alt="" srcset="">
+                    <img src="./assets/images/project.png" alt="" srcset="">
                     <h3 class="work-title">work 1</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi maiores quisquam odio ex natus doloremque, porro quos quasi magnam sunt odit esse exercitationem at ullam ea! Corrupti provident perspiciatis repellat.</p>
                 </div>
