recent works added on mobile and desktop version

--- a/index.html
+++ b/index.html
@@ -82,22 +82,22 @@
                 <div class="work">
                     <img src="./assets/images/project.png" alt="" srcset="">
                     <h3 class="work-title">work 1</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi maiores quisquam odio ex natus doloremque, porro quos quasi magnam sunt odit esse exercitationem at ullam ea! Corrupti provident perspiciatis repellat.</p>
+                    <p>Lorem ipsum dolor sit amet</p>
                 </div>
                 <div class="work">
-                    <img src="./assets/images/menu.svg" alt="" srcset="">
+                    <img src="./assets/images/project.png" alt="" srcset="">
                     <h3 class="work-title">work 1</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi maiores quisquam odio ex natus doloremque, porro quos quasi magnam sunt odit esse exercitationem at ullam ea! Corrupti provident perspiciatis repellat.</p>
                 </div>
                 <div class="work">
-                    <img src="./assets/images/menu.svg" alt="" srcset="">
+                    <img src="./assets/images/project.png" alt="" srcset="">
                     <h3 class="work-title">work 1</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi maiores quisquam odio ex natus doloremque, porro quos quasi magnam sunt odit esse exercitationem at ullam ea! Corrupti provident perspiciatis repellat.</p>
                 </div>
                     <div class="work">
-                        <img src="./assets/images/menu.svg" alt="" srcset="">
+                        <img src="./assets/images/project.png" alt="" srcset="">
                         <h3 class="work-title">work 1</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi maiores quisquam odio ex natus doloremque, porro quos quasi magnam sunt odit esse exercitationem at ullam ea! Corrupti provident perspiciatis repellat.</p>
+                        <p>  quos quasi magnam sunt odit esse exercitationem at ullam ea! Corrupti provident perspiciatis repellat.</p>
                     </div>
             </div>
             <button class="work-btn"> Add Your Work</button>
