partners section added to the app both on mobile and desktop version are added

--- a/index.html
+++ b/index.html
@@ -128,6 +128,14 @@
                 <button class="testimonial-more-btn"><p>MORE</p> <img src="./assets/images/arrow-down.svg" alt="" srcset=""></button>
              </div>
         </section>
+        <section class="partners">
+            <h1 class="underline-center partners-title">Partners</h1>
+            <ul class="partners-list">
+                <li>Google</li>
+                <li>Linkedin</li>
+                <li>Facebook</li>
+            </ul>
+        </section>
     </main>
 </body>
 </html>
