footer section updated and partners section updated to include link images

--- a/index.html
+++ b/index.html
@@ -131,11 +131,23 @@
         <section class="partners">
             <h1 class="underline-center partners-title">Partners</h1>
             <ul class="partners-list">
-                <li>Google</li>
-                <li>Linkedin</li>
-                <li>Facebook</li>
+                <li><a title="mozila" href=""><img src="./assets/images/imgpartner1.png" alt="" srcset=""></a></li>
+                <li><a title="google" href=""><img src="./assets/images/imgpartner2.png" alt="" srcset=""></a></li>
+                <li><a title="naver" href=""><img src="./assets/images/imgpartner3.png" alt="" srcset=""></a></li>
+                <li><a title="daumkako" href=""><img src="./assets/images/imgpartner4.png" alt="" srcset=""></a></li>
+                <li><a title="airbnb" href=""><img src="./assets/images/imgpartner5.png" alt="" srcset=""></a></li>
             </ul>
         </section>
     </main>
+    <footer class="footer">
+        <div class="footer-left">
+            <img src="./assets/images/copy-right.png" alt="" srcset="">
+        </div>
+        <div class="footer-right">
+            <p>2023, serategena, all rights reserved.</p>
+            <br>
+            <p class="footer-right-desc">달리 정하지 않은 웹사이트의 모든 내용은 크리에이티브 커먼즈 저작자표시 2.0 대한민국 라이선스에 따라 이용할 수 있습니다. 자세한 이용기능 내용과 허락조건은 http://creativecommons.org/licences/by/2.0/kr 를 보세요.</p>
+        </div>
+    </footer>
 </body>
 </html>
