about page is added to the app according to the design requirements

--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
             </div>
             <ul class="nav-links">
                 <li class="nav-link-list"><a href="/">Home</a></li>
-                <li class="nav-link-list"><a href="/about">About</a></li>
-                <li class="nav-link-list"><a href="/services">Services</a></li>
+                <li class="nav-link-list"><a href="/pages/about.html">About</a></li>
+                <li class="nav-link-list"><a href="/pages/services.html">Services</a></li>
                 <li class="nav-link-list"><button class="nav-btn">Become Tasker</button></li>
             </ul>
         </nav>
