--- a/pages/about.html
+++ b/pages/about.html
@@ -106,5 +106,8 @@
         </div>
     </footer>
 </body>
+<script src="../scripts/staticData.js"></script>
+<script src="../scripts/virtualDOMParser.js"></script>
+<script src="../scripts/virtualDOM.js"></script>
 <script src="../scripts/index.js"></script>
 </html>
