Revert "testimonials section updated."

--- a/index.html
+++ b/index.html
@@ -107,8 +107,25 @@
         </section>
         <section class="testimonial">
              <h1 class="testimonial-title underline-center">Take Their Words</h1>
-             <div class="testimonials-container" id="testimonialCard">
-               
+             <div class="testimonials-container">
+                <div class="testimonial-card">
+                    <div class="testimonial-card-img">
+                    </div>
+                    <div class="testimonial-card-content">
+                         <h2 class="testimonial-name">haben mehari</h2>
+                         <p class="testimonial-task">desk move</p>
+                         <p class="testimonial-comment">Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto deleniti sint a inventore perspiciatis? Incidunt, fuga! Aspernatur ullam consectetur aliquid deserunt alias, adipisci natus sapiente quam vero eaque! Eveniet, porro.</p>
+                    </div>
+                </div>
+                <div class="testimonial-card">
+                    <div class="testimonial-card-img">
+                    </div>
+                    <div class="testimonial-card-content">
+                         <h2 class="testimonial-name">haben mehari</h2>
+                         <p class="testimonial-task">desk move</p>
+                         <p class="testimonial-comment">Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto deleniti sint a inventore perspiciatis? Incidunt, fuga! Aspernatur ullam consectetur aliquid deserunt alias, adipisci natus sapiente quam vero eaque! Eveniet, porro.</p>
+                    </div>
+                </div>
              </div>
              <div class="testimonial-more">
                 <button class="testimonial-more-btn"><p>MORE</p> <img src="./assets/images/arrow-down.svg" alt="" srcset=""></button>
@@ -136,8 +153,5 @@
         </div>
     </footer>
 </body>
-<script src="./scripts/staticData.js"></script>
-<script src="./scripts/virtualDOMParser.js"></script>
-<script src="./scripts/virtualDOM.js"></script>
 <script src="./scripts/index.js"></script>
 </html>
