navigation link urls updated for the navigation links

--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
                 <img class="close-menu-icon-img" src="./assets/images/times.svg" alt="" srcset="">
             </div>
             <ul class="nav-links" id="menu-items">
-                <li class="nav-link-list"><a href="/">Home</a></li>
-                <li class="nav-link-list"><a href="/pages/about.html">About</a></li>
-                <li class="nav-link-list"><a href="/pages/services.html">Services</a></li>
+                <li class="nav-link-list"><a href="/serategna">Home</a></li>
+                <li class="nav-link-list"><a href="./pages/about.html">About</a></li>
+                <li class="nav-link-list"><a href="./pages/services.html">Services</a></li>
                 <li class="nav-link-list"><button class="nav-btn">Become Tasker</button></li>
             </ul>
         </nav>
