social media image path updated on the about page.

--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
         </div>
         <nav class="app-nav" id="menu">
             <div class="app-logo">
-                <a title="app logo" href="/"><img class="logo-img" src="./assets/images/logo.png" alt="" srcset=""></a>
+                <a title="app logo" href="./index.html"><img class="logo-img" src="./assets/images/logo.png" alt="" srcset=""></a>
             </div>
             <div class="close-menu-icon" id="menu-close">
                 <img class="close-menu-icon-img" src="./assets/images/times.svg" alt="" srcset="">
             </div>
             <ul class="nav-links" id="menu-items">
-                <li class="nav-link-list"><a href="/serategna">Home</a></li>
+                <li class="nav-link-list"><a href="./index.html">Home</a></li>
                 <li class="nav-link-list"><a href="./pages/about.html">About</a></li>
                 <li class="nav-link-list"><a href="./pages/services.html">Services</a></li>
                 <li class="nav-link-list"><button class="nav-btn">Become Tasker</button></li>
