--- a/pages/about.html
+++ b/pages/about.html
@@ -12,8 +12,8 @@
         <div class="app-header-info">
                 <div class="header-info-links">
                     <ul class="social-links">
-                        <li class="social-link-list"><a title="facebook link" href=""><img src="./assets/images/facebook.png" alt="" srcset=""></a></li>
-                        <li class="social-link-list"><a title="twitter link" href=""><img src="./assets/images/twitter.svg" alt="" srcset=""></a></li>
+                        <li class="social-link-list"><a title="facebook link" href=""><img src="../assets/images/facebook.png" alt="" srcset=""></a></li>
+                        <li class="social-link-list"><a title="twitter link" href=""><img src="../assets/images/twitter.svg" alt="" srcset=""></a></li>
                     </ul>
                     <ul class="other-links">
                         <li class="other-link-list"><a href="">English</a></li>
