anchor tag title added for semantix reasons

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
                         <li class="social-link-list"><a title="twitter link" href=""><img src="./assets/images/twitter.svg" alt="" srcset=""></a></li>
                     </ul>
                     <ul class="other-links">
-                        <li class="other-link-list"><a href="">English</a></li>
-                        <li class="other-link-list"><a href="">Amharic</a></li>
-                        <li class="other-link-list"><a href="">Signout</a></li>
+                        <li class="other-link-list"><a title="english" href="">English</a></li>
+                        <li class="other-link-list"><a title="amharic"  href="">Amharic</a></li>
+                        <li class="other-link-list"><a title="signout"  href="">Signout</a></li>
                     </ul>
                 </div>
         </div>
