daynamic page images updated and about pages also updated

--- a/pages/about.html
+++ b/pages/about.html
@@ -44,24 +44,29 @@
         <section class="home-section about-section">
             <div class="home-section-desktop-container">
                 <div class="home-section-overlay">
-                    <div class="search-task-card about-us">
-                        <h1 class="app-moto underline-center">About Us</h1>
+                    <h1 class="about-us-title underline-center">About Us</h1>
+                    <div class="about-us-content">
                         <p>
                             Serategna, has been providing home owners, contractors and service providers with quality matching services and helpful resources. 
                             We ourselves are homeowners, contractors and users of Serategna to fill our own need to find quality contractors to do property management and home improvement with our commercial and residential real-estate holdings.
                             We know how frustrating it can be in finding quality and respectable serategna contractors and will continue to bring new products and services to our site to make your experience an enjoyable one.
                         </p>
                         <p>
-                            Have you heard of myspace or facebook? Well forget social networking, we are focused on you, the consumer. 
-                            RealtyProfile is a construction related consumer networking applications build specifically for the homeowner/contractor/realtor market.
-                            We are becoming the industry standard "consumer networking" portal. We have recently introduced our customized web page offering, free for a limited time, to home owners, realtors and contractors. 
-                            RealtyProfile is becoming a catalyst product for our customers to help streamline communications, rate/review service providers, update and track work progress and much more. 
-                            Serategna and RealtyProfile are your home improvement and property management best friend if you want to save time, frustration and get the job done. We have many exciting future developments planned. 
-                            Below you can see we have a large online virtual real estate portfolio to work with. We are here to serve you and strive to bring products and service to market that make your life easier when trying to improve or maintain your most important asset, your property. 
-                            Contact us webmaster at serategna dot com anytime with your comments or questions and please check back often and visit our award winning RealtyForum.
+                            Have you heard of myspace or facebook? Well forget social networking, we are focused on you, the consumer. RealtyProfile is a construction related consumer networking applications build specifically for the homeowner/contractor/realtor market. We are becoming the industry standard "consumer networking" portal. We have recently introduced our customized web page offering, free for a limited time, to home owners, realtors and contractors. RealtyProfile is becoming a catalyst product for our customers to help streamline communications, rate/review service providers, update and track work progress and much more. Serategna and RealtyProfile are your home improvement and property management best friend if you want to save time, frustration and get the job done. We have many exciting future developments planned. Below you can see we have a large online virtual real estate portfolio to work with. We are here to serve you and strive to bring products and service to market that make your life easier when trying to improve or maintain your most important asset, your property. Contact us webmaster at serategna dot com anytime with your comments or questions and please check back often and visit our award winning RealtyForum.
                         </p>
-                     </div> 
+                     </div>
+                    <div class="about-us-footer">
+                        <p>Please contact us per Email for any further questions about Serategna !</p>
+                        <a title="company email" href="#">habenmehari71@gmail.com</a>
+                    </div> 
                 </div>
+            </div>
+        </section>
+        <section class="about-logo-section">
+            <div class="about-logo">
+                <h1 class="underline-center about-logo-title">Serategna Logo</h1>
+            <p class="about-logo-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur facere quod, ratione ullam harum a, rem quidem quisquam, provident praesentium odit totam non. Impedit placeat dolorum neque earum distinctio ducimus.</p>
+           <img class="about-logo-img"  src="../assets/images/cclogo.jpg" alt="" srcset="">
             </div>
         </section>
         <section class="awards">
